--- a/assets/css/materialize.css
+++ b/assets/css/materialize.css
@@ -4525,7 +4525,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 h1 {
   font-size: 4.2rem;
   line-height: 110%;
-  margin: 2.8rem 0 1.68rem 0;
+  margin: 20vh 0 1.6rem 0;
 }
 
 h2 {
