--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,11 @@ nav {
 
 
 /* PROJECT SECTION (GENERAL) */
+#modal-projects {
+    width: 80%;
+    padding-right: 100px;
+    padding-left: 100px;
+}
 
 /* black gradient */
 #col-color {
@@ -164,6 +169,12 @@ footer h2{
 
     #modal-contact h2 {
         font-size:20px;
+    }
+
+    #modal-projects {
+        width: 80%;
+        padding-right: 10px;
+        padding-left: 10px;
     }
 
     header {
