--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,13 @@ h3 {
     min-height: 70vh;
 }
 
+.admin-header {
+    background : url("../img/adminhead");
+    background-size: cover;
+    background-position:center;
+    min-height: 70vh;
+}
+
 nav {
     background-color: rgba(32, 65, 54, 0.7);
 }
@@ -116,6 +123,12 @@ nav {
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 25%,
     rgba(0,0,0,0.65) 37.5%, rgba(0,0,0,0.7) 50%, rgba(0,0,0,0.65) 62.5%, rgba(0, 0, 0, 0.5) 75%,
     rgba(0, 0, 0, 0) 100%);
+}
+
+#tabAdmin {
+    background: linear-gradient(90deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.65) 25%, rgba(0, 0, 0, 0.5) 37.5%,
+    rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5) 62.5%, rgba(0,0,0,0.65) 75%, rgba(0,0,0,0.7) 100%,);
+    font-size: 35px;
 }
 
 /* caroussel section */
