--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,11 @@ footer h2{
     font-size:27px;
 }
 
+/* TAB ADMIN */
+#theUsers {
+    width: 100%;
+}
+
 
 @media only screen and (max-width:700px) {
     h1 {
